Let "cancel" button restore also default composition
if there is no specific one, yet.

--- a/starcounter-layout-html-editor.html
+++ b/starcounter-layout-html-editor.html
@@ -315,7 +315,7 @@ version: 0.0.0
                     if (!this.partial) {
                         return false;
                     }
-                    return this.partial.compositionElement.composition = this.partial.storedLayout;
+                    return this.partial.compositionElement.composition = this.partial.storedLayout || this.partial.defaultComposition;
                     // return this.set('content', this.partial.storedLayout);
 
                 }
