--- a/juicy-simple-visual-html-editor.html
+++ b/juicy-simple-visual-html-editor.html
@@ -75,23 +75,25 @@ version: 0.0.0
             }
         </style>
         <div class="toolkit-ui" disabled$="{{!elements.length}}">
-            <!-- for easier IntelliSense, everything is prefixed with btn -->
-            <button id="btn-move-up" title="Move selected node upword inside its parent node">
+            <button title="Move selected node upword inside its parent node"
+                on-click="moveElementsUp">
                 <svg x="0px" y="0px" width="16px" height="16px" viewBox="0 -20 300 400">
                 <path d="M2 188c-3 4 -3 9 -1 13s7 7 12 7h62v167c0 7 6 13 13 13h116c7 0 12 -6 12 -13v-167h63c5 0 9 -3 11 -7s2 -9 -1 -13l-132 -187c-2 -3 -7 -5 -11 -5v0c-4 0 -8 2 -10 5z"></path>
                 </svg>
             </button>
-            <button id="btn-move-down" title="Move selected node downward inside its parent node">
+            <button title="Move selected node downward inside its parent node"
+                on-click="moveElementsDown">
                 <svg x="0px" y="0px" width="16px" height="16px" viewBox="0 -20 300 400">
                     <path d="M289 196c3 -4 3 -9 1 -13s-6 -7 -11 -7h-63v-167c0 -7 -5 -13 -12 -13h-116c-7 0 -13 6 -13 13v167h-62c-5 0 -10 3 -12 7s-2 9 1 13l133 187c2 3 6 5 10 5v0c4 0 9 -2 11 -5z"></path>
                 </svg>
             </button>
-            <button id="btn-move-outside" title="Jump selected node upword to outsite its parent node" on-click="moveElementsOut">
+            <button title="Jump selected node upword to outsite its parent node"
+                on-click="moveElementsOut">
                 <svg x="0px" y="0px" width="16px" height="16px" viewBox="0 -20 300 400">
                     <path d="M192 335c4 3 9 3 13 1s7 -6 7 -11v-62h168c7 0 13 -6 13 -13v-116c0 -7 -6 -13 -13 -13h-168v-62c0 -5 -3 -9 -7 -11s-9 -2 -13 1l-187 132c-3 2 -5 7 -5 11v0c0 4 2 8 5 10z"></path>
                 </svg>
             </button>
-            <button id="btn-show-hide"
+            <button
               title="Hide node"
               on-click="hideElements"
               disabled$="{{!stylableElements(elements)}}">
@@ -101,7 +103,7 @@ version: 0.0.0
                     <rect class="cls-1" x="-3" y="17.78" width="77.77" height="6" transform="translate(-5.54 18.89) rotate(-27.47)"/>
                 </svg>
             </button>
-            <button id="btn-show-hide"
+            <button
               title="Show node"
               on-click="showElements"
               disabled$="{{!stylableElements(elements)}}">
@@ -109,12 +111,13 @@ version: 0.0.0
                     <path d="M359 204c4 -2 6 -6 6 -11c0 -4 -2 -8 -4 -10v0v0l-1 -1l-79 -79v0c-24 -27 -60 -44 -99 -44c-35 0 -66 14 -90 36v-1l-87 87c-3 3 -5 7 -5 11c0 3 1 7 3 9v0l80 79c24 27 60 45 99 45c35 0 67 -14 91 -36v1zM182 102c50 0 90 40 90 90s-40 90 -90 90s-90 -40 -90 -90 s40 -90 90 -90zM139 192c0 29 14 43 43 43s44 -14 44 -43s-15 -44 -44 -44s-43 15 -43 44z"></path>
                 </svg>
             </button>
-            <button id="btn-insert" title="Insert a new container">
+            <button title="Insert a new container">
                 <svg x="0px" y="0px" width="16px" height="16px" viewBox="45 -20 300 400">
                     <path d="M362 245c5 0 9 -5 9 -10v-86c0 -3 -1 -5 -3 -7s-3 -3 -6 -3h-124v-123c0 -2 -1 -5 -3 -7s-4 -3 -6 -3h-87c-2 0 -4 1 -6 3s-3 5 -3 7v123h-124c-2 0 -4 1 -6 3s-3 5 -3 7v86c0 5 4 10 9 10h124v123c0 5 4 10 9 10h87c5 0 9 -5 9 -10v-123h124z"></path>
                 </svg>
             </button>
-            <button id="btn-delete" title="Delete selected node">
+            <button title="Delete selected node"
+                on-click="deleteElements">
                 <svg x="0px" y="0px" width="16px" height="16px" viewBox="0 0 300 400">
                     <rect x="0" y="150" width="300" height="100">
                 </svg>
@@ -183,6 +186,11 @@ version: 0.0.0
                     this.$.tree._docChanged(this.doc)
                 },
 
+                stylableElements: function(elements){
+                    return elements && elements.filter(elementHasStyle).length;
+                },
+
+                // TODO: DRY
                 hideElements: function() {
                     let changed = false;
                     if(!this.elements.length){
@@ -216,9 +224,6 @@ version: 0.0.0
                     }
                     changed && fireChangeEvent(this, 'showElements', this.elements);
                 },
-                stylableElements: function(elements){
-                    return elements && elements.filter(elementHasStyle).length;
-                },
                 moveElementsOut: function() {
                     if(!this.elements.length){
                         return;
@@ -236,6 +241,57 @@ version: 0.0.0
                         fireChangeEvent(this, 'moveElementsOut', this.elements);
                     }
                 },
+                deleteElements: function() {
+                    if(!this.elements.length){
+                        return;
+                    }
+                    let changed = false;
+                    for (var elementNo = 0, len = this.elements.length; elementNo < len; elementNo++) {
+                        let element = this.elements[elementNo];
+                        if(element.parentNode){
+                            element.parentNode.removeChild(element);
+                            changed = true;
+                        }
+                    }
+                    if(changed){
+                        // this.$.tree._docChanged(this.doc);
+                        fireChangeEvent(this, 'deleteElements', this.elements);
+                    }
+                },
+                moveElementsUp: function() {
+                    if(!this.elements.length){
+                        return;
+                    }
+                    let changed = false;
+                    for (var elementNo = 0, len = this.elements.length; elementNo < len; elementNo++) {
+                        let element = this.elements[elementNo];
+                        if(element.parentNode && element.previousSibling){
+                            element.parentNode.insertBefore(element, element.previousSibling);
+                            changed = true;
+                        }
+                    }
+                    if(changed){
+                        // this.$.tree._docChanged(this.doc);
+                        fireChangeEvent(this, 'movesElementUp', this.elements);
+                    }
+                },
+                moveElementsDown: function() {
+                    if(!this.elements.length){
+                        return;
+                    }
+                    let changed = false;
+                    for (var elementNo = 0, len = this.elements.length; elementNo < len; elementNo++) {
+                        let element = this.elements[elementNo];
+                        if(element.parentNode && element.nextSibling){
+                            element.parentNode.insertBefore(element, element.nextSibling.nextSibling);
+                            changed = true;
+                        }
+                    }
+                    if(changed){
+                        // this.$.tree._docChanged(this.doc);
+                        fireChangeEvent(this, 'movesElementDown', this.elements);
+                    }
+                }
 
             });
 
