Adjust button styles, not to get broken so easily by bootstrap
Starcounter/starcounter-layout-html-editor/issues/5
Starcounter/EpicDemo/issues/14

--- a/juicy-simple-visual-html-editor.html
+++ b/juicy-simple-visual-html-editor.html
@@ -54,6 +54,7 @@ version: 0.0.0
                 padding: 6px;
                 fill: #444;
                 vertical-align: middle;
+                line-height: 1em;
             }
             .toolkit-ui button.text
             {
