--- a/juicy-simple-visual-html-editor.html
+++ b/juicy-simple-visual-html-editor.html
@@ -196,7 +196,8 @@ version: 0.0.0
                 properties: {
                     doc: {
                         type: Object,
-                        observer: 'docMutated'
+                        observer: 'docMutated',
+                        value: null
                     },
                     disabled: {
                         type: Boolean,
